--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "dallasmgriffith",
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.3.4"
   }
